--- a/Python_Jupyter/Loops.ipynb
+++ b/Python_Jupyter/Loops.ipynb
@@ -125,12 +125,13 @@
       "5\n",
       "4\n",
       "3\n",
-      "2\n"
+      "2\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "for i in range(10,1,-1):\n",
+    "for i in range(10,0,-1):\n",
     "    print(i)"
    ]
   },
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -255,12 +256,13 @@
     "    if i==5:\n",
     "        break\n",
     "    print(i)\n",
+    "    # break\n",
     "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -344,14 +346,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sum of first 10 natural number: 55\n"
+      "Sum of first 10 natural number: 120\n"
      ]
     }
    ],
@@ -360,7 +362,7 @@
     "\n",
     "## while loop  \n",
     "\n",
-    "n=10   \n",
+    "n=15  \n",
     "sum=0\n",
     "count=1\n",
     "\n",
